--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -17,17 +17,13 @@
 			<tr>
 	{% for video in video_data %}
 
-	{% if  loop.first == true %}
-	<tr>
-	<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{ video.course }}</h5>
-	</tr>
-	{% endif %}
 
-	<!-- {% if  loop.first == false and loop.previtem.course != video.course %}
+
+{% if  loop.changed(video.course) %}
 		<tr>
 		<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{ video.course }}</h5>
 		</tr>
-		{% endif %} -->
+		{% endif %} 
 	
 		<td class="small"><div>{{video.video}}</div><div>{{video.vimeo}}</div></td>
 		{% if loop.index % 4 == 0 %}
