--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -15,23 +15,23 @@
 <table class="table borderless table-condensed"   >
 	<tbody>
 			<tr>
+	{%set ns=namespace(course="none")%}
 	{% for video in video_data %}
+		{% if loop.first == true or (video.course!=ns.course and ns.course!="none") %}
+			<tr>
+			<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{video_data[loop.index].course}}</h5>
+			</tr>
+		{% endif %}
 
-
-
-{% if  loop.changed(video.course) %}
-		<tr>
-		<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{ video.course }}</h5>
-		</tr>
-		{% endif %} 
-	
 		<td class="small"><div>{{video.video}}</div><div>{{video.vimeo}}</div></td>
 		{% if loop.index % 4 == 0 %}
 		<tr>
 		{% endif %}	
+
 		{% if  loop.length == 0 %}
-	<b>Please purchase premium video plans. You are not subscribed to any video course.</b>
-	{% endif %}
+			<b>Please purchase premium video plans. You are not subscribed to any video course.</b>
+		{% endif %}
+	{%set ns.course=video.course%}
 	{% endfor %}
 </tr>
 </tbody>
