--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -15,9 +15,9 @@
 <table class="table borderless table-condensed"   >
 	<tbody>
 			<tr>
-	{%set ns=namespace(course="none")%}
+	{%set course = {'foo': False} %}
 	{% for video in video_data %}
-		{% if loop.first == true or (video.course!=ns.course and ns.course!="none") %}
+		{% if loop.first == true or (video.course!=course.foo and course.foo!=False) %}
 			<tr>
 			<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{video.course}}</h5>
 			</tr>
@@ -31,7 +31,9 @@
 		{% if  loop.length == 0 %}
 			<b>Please purchase premium video plans. You are not subscribed to any video course.</b>
 		{% endif %}
-	{%set ns.course=video_data[loop.index-1].course%}
+		{% if course.update({'foo': video.course}) %} {% endif %}
+	
+	
 	{% endfor %}
 </tr>
 </tbody>
