--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -17,7 +17,7 @@
 			<tr>
 	{%set course = {'foo': False} %}
 	{% for video in video_data %}
-		{% if loop.first == true or (video.course!=course.foo and course.foo!=False) %}
+		{% if loop.first == true or (video.course!=course.foo and course.foo!=False and loop.last==false) %}
 			<tr>
 			<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{video.course}}</h5>
 			</tr>
