--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -25,7 +25,7 @@
 
 		{% if loop.first == true or (video.course!=course.foo and course.foo!=False ) %}
 			<tr>
-			<td  ><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{video.course}}</h5>
+			<td colspan="4"><h5 class="octicon octicon-file-text" >  {{ _("Course -") }} {{video.course}}</h5></td>
 			</tr>
 			{% if group.update({'count': 0}) %} {% endif %}	
 		{% endif %}
