--- a/video_library/www/premium.html
+++ b/video_library/www/premium.html
@@ -1,56 +1,83 @@
-
 {% extends "templates/web.html" %}
 {% block title %}{{ _("Premium Video Library") }}{% endblock %}
 {% block header %}
-	
+
 {% endblock %}
 {% block style %}
-	<style>
-	</style>
+        <style>
+                h4.title{
+                        border: 1px solid #ddd;
+                        padding: 12px 14px;
+                        background: #f2f2f2;
+                        border-radius: 5px;
+                        font-size: 18px;
+                        font-weight: 600;
+                }
+                h4.title span{
+                        padding-right: 11px;
+                        font-size: 22px;
+                }
+                h5.subtitle{
+                        font-size: 17px;
+                        line-height: 28px;
+                        margin: 0;
+                        padding: 5px 0;
+                   display: inline-block;
+                }
+                h5.subtitle span{
+                        font-size: 20px;
+                        padding-right: 7px;
+                }
+                .table > tbody > tr > td{
+                        border:none;
+                }
+        </style>
 {% endblock %}
 
 {% block page_content %}
-<h4 class="octicon octicon-device-camera-video" > <font face="Segoe UI!important;">{{ _("Premium Video Library") }}</font></h4>
+<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{ _("Premium Video Library") }}</h4>
 <div class="table-responsive">
 <table class="table borderless table-condensed"   >
-	<tbody>
-			<tr>
-	{%set course = {'foo': False} %}
-	{%set break = {'count': 0} %}
+        <tbody>
+                        <tr>
+        {%set course = {'foo': False} %}
+        {%set break = {'count': 0} %}
+
 	{%set group = {'count': 0} %}
 
 	{% for video in video_data %}
 
-		{% if group.update({'count': group.count+1}) %} {% endif %}
+	{% if group.update({'count': group.count+1}) %} {% endif %}
 
-		{% if loop.first == true or (video.course!=course.foo and course.foo!=False ) %}
+	{% if loop.first == true or (video.course!=course.foo and course.foo!=False ) %}
 			<tr>
-			<td colspan="4"><h5 class="octicon octicon-file-text" ><font face="Segoe UI!important;"> {{ _("Course -") }} {{video.course}}</font></h5></td>
-			</tr>
-			{% if group.update({'count': 0}) %} {% endif %}	
-		{% endif %}
+			<td colspan="4" style="text-align: left;"><h5 class="subtitle"><span class="octicon octicon-file-text"></span>{{ _("Course -") }} {{video.course}}</h5></td>
 
-		{% if (video.course!=course.foo and course.foo!=False ) %}
-			{% if break.update({'count':1}) %} {% endif %}		
-		{% else %}
-			{% if break.update({'count':0}) %} {% endif %}			
-		{% endif %}
-		
-		
-		{% if (group.count % 4 == 0 and group.count!=0) %}
-		<tr>
-		{% endif %}	
-	
-		<td class="small"><div><font face="Segoe UI!important;">{{video.video}}</font></div><div>{{video.vimeo}}</div></td>
-	
-		{% if  loop.length == 0 %}
+			</tr>
+			{% if group.update({'count': 0}) %} {% endif %}
+	{% endif %}
+
+	{% if (video.course!=course.foo and course.foo!=False ) %}
+			{% if break.update({'count':1}) %} {% endif %}
+	{% else %}
+			{% if break.update({'count':0}) %} {% endif %}
+	{% endif %}
+
+
+	{% if (group.count % 4 == 0 and group.count!=0) %}
+	<tr>
+	{% endif %}
+
+	<td class="small"><div><font face="Segoe UI!important;">{{video.video}}</font></div><div>{{video.vimeo}}</div></td>
+
+	{% if  loop.length == 0 %}
 			<b>Please purchase premium video plans. You are not subscribed to any video course.</b>
-		{% endif %}
-	
-		{% if course.update({'foo': video.course}) %} {% endif %}
-		
-	
-	{% endfor %}
+	{% endif %}
+
+	{% if course.update({'foo': video.course}) %} {% endif %}
+
+
+{% endfor %}
 </tr>
 </tbody>
 </table>
