--- a/video_library/www/video_product_search.html
+++ b/video_library/www/video_product_search.html
@@ -5,6 +5,10 @@
 	<style>
 		{% include "video_library/templates/generators/video_category.css" %}
 	</style>
+	<style>
+		#page-video_product_search .page-head .page-search-block{ margin-top: 0px !important; }
+		.product-search-content .alert-warning{ background-color:#4aa3df; color:#000; border-color:#4aa3df;}
+	</style>
 {% endblock %}
 {% block header %}<h2>{{ _("Video Search") }}</h2>{% endblock %}
 
